--- a/index.html
+++ b/index.html
@@ -5,17 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em</title>
     <link rel="stylesheet" href="LoginStyle.css">
+    <script>
+        // Usernames and their corresponding passwords
+        const users = {
+            "Griffin": "GoFrogs",
+            "Owen": "GoFrogs",
+            "Dougherty": "GoFrogs",
+            "Prince": "GoFrogs",
+            "Goin": "GoFrogs",
+            "OC": "GoFrogs",
+            "Semme": "GoFrogs",
+            "Jensen": "GoFrogs",
+            "Saul": "GoFrogs",
+            "Dorgs": "GoFrogs"
+        };
+
+        function validateLogin(event) {
+            event.preventDefault();
+
+            const username = document.getElementById("username").value.trim();
+            const password = document.getElementById("password").value;
+
+            if (users[username] && users[username] === password) {
+                window.location.href = "landing.html"; // Redirect to landing page
+            } else {
+                alert("Invalid username or password. Please try again.");
+            }
+        }
+    </script>
 </head>
 <body>
     <h1>CFB Pick 'Em</h1>
-  <h2><em>2025 Season</em></h2>
+    <h2><em>2025 Season</em></h2>
 
     <img src="UNTLorax.jpg" alt="ALL HAIL THE LORAX LAY">
 
     <main>
         <div class="login-container">
             <h3>Login</h3>
-            <form action="/login" method="POST">
+            <form onsubmit="validateLogin(event)">
                 <input type="text" id="username" name="username" placeholder="Username" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
