--- a/landing.html
+++ b/landing.html
@@ -21,8 +21,15 @@
 
     <main>
         <h1>Welcome to CFB Pick 'Em!</h1>
-        <h2>Week Overview</h2>
-        <p>Here you'll find the latest overview for this week's games, picks, and updates. Use the navigation above to explore different sections.</p>
+        <h2><em>THE RULES...</em></h2>
+            <ol>
+                <li>Individual game picks are due before kickoff of their respective game.</li>
+                <li>Promo wager is due before kickoff of the first game in the promo.</li>
+                <li>Upsets must be at least +5.5 point underdogs.</li>
+                <li>A maximum wager of 10 is allowed on your upset.</li>
+                <li>If you pick TCU to lose and they win, it is -10 points.</li>
+            </ol>
+
     </main>
 </body>
 </html>
