--- a/week-overview.html
+++ b/week-overview.html
@@ -6,39 +6,19 @@
     <title>Week Overview</title>
     <link rel="stylesheet" href="week-overview.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-        }
-
-        header {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .week-title {
-            color: white;
-            background-color: purple;
-            padding: 20px;
-            border-radius: 10px;
-            font-size: 2em;
-            display: inline-block;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .content-box {
-            background-color: #fff;
-            border: 2px solid purple;
-            border-radius: 10px;
-            margin: 20px auto;
-            padding: 20px;
-            max-width: 800px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
+</head>
+<body>
+    <header>
+        <nav>
+            <ul class="nav-menu">
+                <li><a href="week-overview.html">Week Overview</a></li>
+                <li><a href="big12-picks.html">Big 12 Picks</a></li>
+                <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
+                <li><a href="upset-promo-picks.html">Upset and Promo Picks</a></li>
+                <li><a href="rules-faq.html">Rules and FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
     </style>
 </head>
 <body>
