--- a/landing.html
+++ b/landing.html
@@ -21,6 +21,7 @@
 
     <main>
         <h1>Welcome to CFB Pick 'Em!</h1>
+        <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
         <h2><em>THE RULES...</em></h2>
             <ol>
                 <li>Individual game picks are due before kickoff of their respective game.</li>
