--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <h1>Welcome to CFB Pick 'Em!</h1>
+        <h1>Welcome to the CFB Pick 'Em!</h1>
         <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
         <h2><em>THE RULES...</em></h2>
             <ol>
