--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Landing Page</title>
     <link rel="stylesheet" href="landingstyle.css">
+
 </head>
 <body>
     <header>
@@ -20,17 +21,20 @@
     </header>
 
     <main>
-        <h1>Welcome to the CFB Pick 'Em!</h1>
-        <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
+   <main>
+    <h1>Welcome to the CFB Pick 'Em!</h1>
+    <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
+    
+    <div class="rules-box">
         <h2><em>THE RULES...</em></h2>
-            <ol>
-                <li>Individual game picks are due before kickoff of their respective game.</li>
-                <li>Promo wager is due before kickoff of the first game in the promo.</li>
-                <li>Upsets must be at least +5.5 point underdogs.</li>
-                <li>A maximum wager of 10 is allowed on your upset.</li>
-                <li>If you pick TCU to lose and they win, it is -10 points.</li>
-            </ol>
-
-    </main>
+        <ol>
+            <li>Individual game picks are due before kickoff of their respective game.</li>
+            <li>Promo wager is due before kickoff of the first game in the promo.</li>
+            <li>Upsets must be at least +5.5 point underdogs.</li>
+            <li>A maximum wager of 10 is allowed on your upset.</li>
+            <li>If you pick TCU to lose and they win, it is -10 points.</li>
+        </ol>
+    </div>
+</main>
 </body>
 </html>
