--- a/week-overview.html
+++ b/week-overview.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week Overview</title>
-    <link rel="stylesheet" href="week-overview.css">
+    <title>CFB Pick 'Em - Landing Page</title>
+    <link rel="stylesheet" href="landingstyle.css">
 
 </head>
 <body>
@@ -21,11 +21,20 @@
     </header>
 
     <main>
-        <h1>Week Overview!</h1>
-        <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
-        <p>
-            OH COME YE OH COME YE FOR HERE IS THE GREATEST TIME OF THE YEAR: BOWL SEASON. Where dreams come true and hope can be ripped from the very depths of your heart. As this season comes to an end with a magical time ahead of us, I would like to express some thoughts on the season behind us. It was fun. That’s it. That’s my only thought right now as I watch the Texas 6 man football state championship on my TV since there really isn’t too much else on and since I have nothing else to do because I am unemployed. But yes, this season was fun with oh so many upsets and TCU playing like absolute dog shit in the beginning of the season (but hey at least we turned it around and we get to keep the country club god of Sunny Dykes running our squad so all the rich white donors of our school can remain happy and continue to give more and more and more and more money to our school. Also if we don’t make it to the playoffs next year then Garthur is gonna get it. And by it, lets just say you know what I mean. So TCU better win : ). Here is another picture I made on CHAT GPT. ALSO, this game is currently in OVERTIME and is electric right now so if you aren’t watching high school football championships then you don’t know ball.
-        </p>
-    </main>
+   <main>
+    <h1>Welcome to the CFB Pick 'Em!</h1>
+    <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
+    
+    <div class="rules-box">
+        <h2><em>THE RULES...</em></h2>
+        <ol>
+            <li>Individual game picks are due before kickoff of their respective game.</li>
+            <li>Promo wager is due before kickoff of the first game in the promo.</li>
+            <li>Upsets must be at least +5.5 point underdogs.</li>
+            <li>A maximum wager of 10 is allowed on your upset.</li>
+            <li>If you pick TCU to lose and they win, it is -10 points.</li>
+        </ol>
+    </div>
+</main>
 </body>
 </html>
