--- a/landing.html
+++ b/landing.html
@@ -31,7 +31,8 @@
             <li>Individual game picks are due before kickoff of their respective game.</li>
             <li>Promo wager is due before kickoff of the first game in the promo.</li>
             <li>Upsets must be at least +5.5 point underdogs.</li>
-            <li>A maximum wager of 10 is allowed on your upset.</li>
+            <li>A maximum wager of 10 is allowed on your upset pick.</li>
+            <li>A maximum wager of 5 is allowed on the promo.</li>
             <li>If you pick TCU to lose and they win, it is -10 points.</li>
         </ol>
     </div>
