--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,7 @@
     <header>
         <nav>
             <ul class="nav-menu">
+                <li><a href="landing.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big12-picks.html">Big 12 Picks</a></li>
                 <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
@@ -23,7 +24,7 @@
     <main>
    <main>
     <h1>Welcome to the CFB Pick 'Em!</h1>
-    <img src="TheCarter.jpg" alt="Image of The Carter" width="600">
+    <img src="TheCarter.jpg" alt="Image of The Carter" width="500">
     
     <div class="rules-box">
         <h2><em>THE RULES...</em></h2>
