--- a/week-overview.html
+++ b/week-overview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Landing Page</title>
-    <link rel="stylesheet" href="landingstyle.css">
+    <link rel="stylesheet" href="week-overview.css">
 
 </head>
 <body>
