--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em</title>
-    <link rel="stylesheet" href="LoginStyle.css">
+    <link rel="stylesheet" href="indexstyle.css">
     <script>
         // Usernames and their corresponding passwords
         const users = {
