--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <h1>CFB Pick 'Em</h1>
-    <h2><em>2025 Season</em></h2>
+    <h2><em>2025 - 2026 Season</em></h2>
 
     <img src="UNTLorax.jpg" alt="ALL HAIL THE LORAX LAY">
 
