--- a/Big12.html
+++ b/Big12.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB Pick 'Em - Landing Page</title>
-    <link rel="stylesheet" href="week-overview.css">
-
+    <title>Big 12 Picks</title>
+    <link rel="stylesheet" href="big12style.css">
 </head>
 <body>
 <header>
@@ -14,7 +13,7 @@
             <ul class="nav-menu">
                 <li><a href="landing.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
-                <li><a href="big12-picks.html">Big 12 Picks</a></li>
+                <li><a href="Big12.html">Big 12 Picks</a></li>
                 <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
                 <li><a href="upset-promo-picks.html">Upset and Promo Picks</a></li>
                 <li><a href="rules-faq.html">Rules and FAQ</a></li>
@@ -26,51 +25,37 @@
 
 <main>
     <h1>Big 12 Picks!</h1>
-        <div class="matchups-container">
-            <div class="matchup-list">
-                <h2>Week's Matchups</h2>
-                <ul id="matchups">
-                    <!-- Matchups will be dynamically populated -->
-                </ul>
-            </div>
+    <div class="matchups-container">
+        <form id="picks-form">
+            <!-- Matchups will be dynamically populated -->
+        </form>
+        <button id="save-button">Save Picks</button>
+    </div>
+</main>
 
-            <div class="selection-panel">
-                <h2>Your Picks</h2>
-                <form id="picks-form">
-                    <!-- Binary options for matchups will be dynamically generated here -->
-                </form>
-                <button id="save-button">Save Picks</button>
-            </div>
-        </div>
-    </main>
+<script>
+    // User login simulation
+    const currentUser = "Griffin";
 
-    <script>
-        // User login simulation
-        const currentUser = "Griffin"; // Simulated user for demonstration
+    // Matchups data
+    const matchups = [
+        { id: 1, team1: "TCU", team2: "Baylor" },
+        { id: 2, team1: "Texas", team2: "Oklahoma" },
+        { id: 3, team1: "Kansas State", team2: "Iowa State" },
+        { id: 4, team1: "Texas Tech", team2: "West Virginia" },
+        { id: 5, team1: "Kansas", team2: "Oklahoma State" }
+    ];
 
-        // Matchups data
-        const matchups = [
-            { id: 1, team1: "TCU", team2: "Baylor" },
-            { id: 2, team1: "Texas", team2: "Oklahoma" },
-            { id: 3, team1: "Kansas State", team2: "Iowa State" },
-            { id: 4, team1: "Texas Tech", team2: "West Virginia" },
-            { id: 5, team1: "Kansas", team2: "Oklahoma State" }
-        ];
+    const picksForm = document.getElementById("picks-form");
 
-        // Populate matchups and form
-        const matchupsList = document.getElementById("matchups");
-        const picksForm = document.getElementById("picks-form");
+    // Populate matchups
+    matchups.forEach((matchup) => {
+        const matchupBox = document.createElement("div");
+        matchupBox.className = "matchup-box";
 
-        matchups.forEach((matchup) => {
-            // Add matchup to list
-            const listItem = document.createElement("li");
-            listItem.textContent = `${matchup.team1} vs ${matchup.team2}`;
-            matchupsList.appendChild(listItem);
-
-            // Add binary options to form
-            const formItem = document.createElement("div");
-            formItem.className = "matchup-option";
-            formItem.innerHTML = `
+        matchupBox.innerHTML = `
+            <div class="matchup-title"><strong>${matchup.team1} vs ${matchup.team2}</strong></div>
+            <div class="matchup-option">
                 <label>
                     <input type="radio" name="matchup-${matchup.id}" value="${matchup.team1}" required>
                     ${matchup.team1}
@@ -79,42 +64,43 @@
                     <input type="radio" name="matchup-${matchup.id}" value="${matchup.team2}" required>
                     ${matchup.team2}
                 </label>
-            `;
-            picksForm.appendChild(formItem);
+            </div>
+        `;
+
+        picksForm.appendChild(matchupBox);
+    });
+
+    // Save picks to localStorage
+    document.getElementById("save-button").addEventListener("click", () => {
+        const formData = new FormData(picksForm);
+        const picks = {};
+
+        matchups.forEach((matchup) => {
+            picks[matchup.id] = formData.get(`matchup-${matchup.id}`);
         });
 
-        // Save picks to localStorage
-        document.getElementById("save-button").addEventListener("click", () => {
-            const formData = new FormData(picksForm);
-            const picks = {};
+        const allPicks = JSON.parse(localStorage.getItem("big12Picks")) || {};
+        allPicks[currentUser] = picks;
+        localStorage.setItem("big12Picks", JSON.stringify(allPicks));
 
-            matchups.forEach((matchup) => {
-                picks[matchup.id] = formData.get(`matchup-${matchup.id}`);
-            });
+        alert("Your picks have been saved!");
+    });
 
-            // Save picks for the current user
-            const allPicks = JSON.parse(localStorage.getItem("big12Picks")) || {};
-            allPicks[currentUser] = picks;
-            localStorage.setItem("big12Picks", JSON.stringify(allPicks));
+    // Load existing picks
+    window.onload = () => {
+        const allPicks = JSON.parse(localStorage.getItem("big12Picks")) || {};
+        const userPicks = allPicks[currentUser] || {};
 
-            alert("Your picks have been saved!");
+        matchups.forEach((matchup) => {
+            const selectedTeam = userPicks[matchup.id];
+            if (selectedTeam) {
+                const radio = document.querySelector(
+                    `input[name="matchup-${matchup.id}"][value="${selectedTeam}"]`
+                );
+                if (radio) radio.checked = true;
+            }
         });
-
-        // Load existing picks
-        window.onload = () => {
-            const allPicks = JSON.parse(localStorage.getItem("big12Picks")) || {};
-            const userPicks = allPicks[currentUser] || {};
-
-            matchups.forEach((matchup) => {
-                const selectedTeam = userPicks[matchup.id];
-                if (selectedTeam) {
-                    const radio = document.querySelector(
-                        `input[name="matchup-${matchup.id}"][value="${selectedTeam}"]`
-                    );
-                    if (radio) radio.checked = true;
-                }
-            });
-        };
-    </script>
+    };
+</script>
 </body>
 </html>
