--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,7 @@
             <ul class="nav-menu">
                 <li><a href="landing.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
-                <li><a href="Big12.html">Big 12 Picks</a></li>
+                <li><a href="big12.html">Big 12 Picks</a></li>
                 <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
                 <li><a href="upset-promo-picks.html">Upset and Promo Picks</a></li>
                 <li><a href="rules-faq.html">Rules and FAQ</a></li>
