--- a/Big12.html
+++ b/Big12.html
@@ -11,7 +11,8 @@
     <div class="header-container">
         <nav>
             <ul class="nav-menu">
-                <li><a href="landing.html">Home</a></li>
+
+                <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big12.html">Big 12 Picks</a></li>
                 <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
@@ -19,7 +20,7 @@
                 <li><a href="rules-faq.html">Rules and FAQ</a></li>
             </ul>
         </nav>
-        <button class="logout-button" onclick="window.location.href='index.html'">Log Out</button>
+        <button class="logout-button" onclick="window.location.href='login.html'">Log Out</button>
     </div>
 </header>
 
