--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB Pick 'Em - Landing Page</title>
-    <link rel="stylesheet" href="landingstyle.css">
+    <title>CFB Pick 'Em - Home Page</title>
+    <link rel="stylesheet" href="homestyle.css">
 
 <header>
     <div class="header-container">
         <nav>
             <ul class="nav-menu">
-                <li><a href="landing.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big12.html">Big 12 Picks</a></li>
                 <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
@@ -18,7 +18,7 @@
                 <li><a href="rules-faq.html">Rules and FAQ</a></li>
             </ul>
         </nav>
-        <button class="logout-button" onclick="window.location.href='index.html'">Log Out</button>
+        <button class="logout-button" onclick="window.location.href='login.html'">Log Out</button>
     </div>
 </header>
 
