--- a/week-overview.html
+++ b/week-overview.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB Pick 'Em - Landing Page</title>
-    <link rel="stylesheet" href="week-overview.css">
+    <title>CFB Pick 'Em - Home Page</title>
+    <link rel="stylesheet" href="homestyle.css">
 
-</head>
-<body>
 <header>
     <div class="header-container">
         <nav>
@@ -15,15 +13,15 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big12.html">Big 12 Picks</a></li>
-                <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
-                <li><a href="upset-promo-picks.html">Upset and Promo Picks</a></li>
-                <li><a href="rules-faq.html">Rules and FAQ</a></li>
+                <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
+                <li><a href="upset-promo.html">Upset and Promo Picks</a></li>
+                <li><a href="futures.html">Futures</a></li>
+                <li><a href="standings.html">Current Standings</a></li>
             </ul>
         </nav>
-        <button class="logout-button" onclick="window.location.href='home.html'">Log Out</button>
+        <button class="logout-button" onclick="window.location.href='login.html'">Log Out</button>
     </div>
 </header>
-
 
     <main>
    <main>
