--- a/Big12.html
+++ b/Big12.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big 12 Picks</title>
-    <link rel="stylesheet" href="big12style.css">
-</head>
-<body>
+    <title>CFB Pick 'Em - Home Page</title>
+    <link rel="stylesheet" href="homestyle.css">
+
 <header>
     <div class="header-container">
         <nav>
             <ul class="nav-menu">
-
                 <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big12.html">Big 12 Picks</a></li>
-                <li><a href="maction-gotw-picks.html">MACtion and GOTW Picks</a></li>
-                <li><a href="upset-promo-picks.html">Upset and Promo Picks</a></li>
-                <li><a href="rules-faq.html">Rules and FAQ</a></li>
+                <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
+                <li><a href="upset-promo.html">Upset and Promo Picks</a></li>
+                <li><a href="futures.html">Futures</a></li>
+                <li><a href="standings.html">Current Standings</a></li>
             </ul>
         </nav>
         <button class="logout-button" onclick="window.location.href='login.html'">Log Out</button>
