--- a/big-twelve.html
+++ b/big-twelve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Home Page</title>
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="big-twelvestyle.css">
 
 <header>
     <div class="header-container">
@@ -12,7 +12,7 @@
             <ul class="nav-menu">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
-                <li><a href="big12.html">Big 12 Picks</a></li>
+                <li><a href="big-twelve.html">Big 12 Picks</a></li>
                 <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
                 <li><a href="upset-promo.html">Upset and Promo Picks</a></li>
                 <li><a href="futures.html">Futures</a></li>
