--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             <ul class="nav-menu">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
-                <li><a href="big12.html">Big 12 Picks</a></li>
+                <li><a href="big-twelve.html">Big 12 Picks</a></li>
                 <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
                 <li><a href="upset-promo.html">Upset and Promo Picks</a></li>
                 <li><a href="futures.html">Futures</a></li>
