--- a/big-twelve.html
+++ b/big-twelve.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB Pick 'Em - Home Page</title>
+    <title>CFB Pick 'Em - Big 12 Picks</title>
     <link rel="stylesheet" href="big-twelvestyle.css">
-
+</head>
+<body>
 <header>
     <div class="header-container">
         <nav>
