--- a/week-overview.html
+++ b/week-overview.html
@@ -28,7 +28,11 @@
     <h1>Week Overview!</h1>
     <div class="week-box">
         <p>
-            OH COME YE OH COME YE FOR HERE IS THE GREATEST TIME OF THE YEAR: BOWL SEASON. Where dreams come true and hope can be ripped from the very depths of your heart. As this season comes to an end with a magical time ahead of us, I would like to express some thoughts on the season behind us. It was fun. That’s it. That’s my only thought right now as I watch the Texas 6 man football state championship on my TV since there really isn’t too much else on and since I have nothing else to do because I am unemployed. But yes, this season was fun with oh so many upsets and TCU playing like absolute dog shit in the beginning of the season (but hey at least we turned it around and we get to keep the country club god of Sunny Dykes running our squad so all the rich white donors of our school can remain happy and continue to give more and more and more and more money to our school. Also if we don’t make it to the playoffs next year then Garthur is gonna get it. And by it, lets just say you know what I mean. So TCU better win : ). Here is another picture I made on CHAT GPT. ALSO, this game is currently in OVERTIME and is electric right now so if you aren’t watching high school football championships then you don’t know ball.
+           <b>WEEK 1 IS AROUND THE CORNER</b>
+           <br></br>
+            After an incredible inaugeral season, we now face new beginnings... new matchups to predict, new promos to hammer, and maybe even another Dougherty dozen. Although the 2024-2025 season will always be appreciated, a short memory may serve some competitors the best. Will is looking for a comeback after finishing more than 100 points out from first, and OC still has much to prove. What will the 2025-2026 season bring? Will Prince go back to back? Or will the promos lead Saul to victory? Only Joel Klatt and the Gods of college football know. I guaruntee you this, though - there will be chaos. Welcome... to the <b>2025-2026 CFB Pick 'Em.</b>
+            <br></br>
+            GO FROGS! 
         </P>
     </div>
 </main>
