--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <div class="header-container">
         <nav>
             <ul class="nav-menu">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" class="active">Home</a></li>
                 <li><a href="week-overview.html">Week Overview</a></li>
                 <li><a href="big-twelve.html">Big 12 Picks</a></li>
                 <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
