--- a/week-overview.html
+++ b/week-overview.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="nav-menu">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="week-overview.html">Week Overview</a></li>
+                <li><a href="week-overview.html" class="active">Week Overview</a></li>
                 <li><a href="big-twelve.html">Big 12 Picks</a></li>
                 <li><a href="mac-gotw.html">MACtion and GOTW Picks</a></li>
                 <li><a href="upset-promo.html">Upset and Promo Picks</a></li>
