--- a/big-twelve.html
+++ b/big-twelve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Big 12 Picks</title>
-    <link rel="stylesheet" href="big-twelvestyle.css">
+    <link rel="stylesheet" href="big-twelve-style.css">
 </head>
 <body>
 <header>
