--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Home Page</title>
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="home-style.css">
 
 <header>
     <div class="header-container">
