--- a/big-twelve.html
+++ b/big-twelve.html
@@ -25,7 +25,7 @@
 </header>
 
 <main>
-    <h1>Big 12 Picks!</h1>
+    <img src="big-twelve-logo.jpg" alt="Big 12 Logo">
     <div class="matchups-container">
         <table id="picks-table">
             <thead>
