--- a/big-twelve.html
+++ b/big-twelve.html
@@ -25,7 +25,10 @@
 </header>
 
 <main>
-    <img src="big-twelve-logo.jpg" alt="Big 12 Logo">
+    <div class="header-with-logo">
+        <h1>Big 12 Picks</h1>
+        <img src="big-twelve-logo.jpg" alt="Big 12 Logo">
+    </div>
     <div class="matchups-container">
         <table id="picks-table">
             <thead>
@@ -42,6 +45,7 @@
         <button id="save-button">Save Picks</button>
     </div>
 </main>
+
 
 <script>
     // User login simulation
