--- a/week-overview.html
+++ b/week-overview.html
@@ -30,7 +30,7 @@
         <p>
            <b>WEEK 1 IS AROUND THE CORNER</b>
            <br></br>
-            After an incredible inaugeral season, we now face new beginnings... new matchups to predict, new promos to hammer, and maybe even another Dougherty dozen. Although the 2024-2025 season will always be appreciated, a short memory may serve some competitors the best. Will is looking for a comeback after finishing more than 100 points out from first, and OC still has much to prove. What will the 2025-2026 season bring? Will Prince go back to back? Or will the promos lead Saul to victory? Only Joel Klatt and the Gods of college football know. I guaruntee you this, though - there will be chaos. Welcome... to the <b>2025-2026 CFB Pick 'Em.</b>
+            After an incredible inaugeral season, we now face new beginnings... new matchups, new promos, and maybe even another Dougherty dozen. Although the 2024-2025 season will always be appreciated, a short memory may serve some competitors the best. Will is looking for a comeback after finishing more than 100 points out from first, and OC still has much to prove. What will the 2025-2026 season bring? Will Prince go back to back? Or will the promos lead Saul to victory? Only Joel Klatt and the Gods of college football know. I guaruntee you this, though - there will be chaos. Welcome... to the <b>2025-2026 CFB Pick 'Em.</b>
             <br></br>
             GO FROGS! 
         </P>
