--- a/mac-gotw.html
+++ b/mac-gotw.html
@@ -25,7 +25,7 @@
 </header>
 
 <main>
-    <h1>MAC Picks!</h1>
+    <h1>MAC Picks</h1>
     <div class="matchups-container">
         <table id="mac-table">
             <thead>
@@ -55,7 +55,7 @@
         </table>
     </div>
 
-    <h1>GOTW Picks!</h1>
+    <h1>GOTW Picks</h1>
     <div class="matchups-container">
         <table id="gotw-table">
             <thead>
