--- a/upset-promo.html
+++ b/upset-promo.html
@@ -25,10 +25,8 @@
 </header>
 
 <main>
-    <h1>Upset and Promo Picks</h1>
-    
     <!-- Upset Pick Table -->
-    <h2>Upset Pick</h2>
+    <h1>Upset Pick</h1>
     <table class="upset-table">
         <thead>
             <tr>
@@ -47,7 +45,7 @@
     </table>
 
     <!-- Promo Table -->
-    <h2>Promo</h2>
+    <h1>Promo Pick</h1>
     <table class="promo-table">
         <thead>
             <tr>
