--- a/week-overview.html
+++ b/week-overview.html
@@ -23,18 +23,21 @@
     </div>
 </header>
 
-    <main>
-   <main>
-    <h1>Week Overview!</h1>
+<main>
+    <div class="page-header">
+        <h1>Week Overview</h1>
+        <img src="week-overview-logo.jpg" alt="Week Overview Logo">
+    </div>
     <div class="week-box">
         <p>
            <b>WEEK 1 IS AROUND THE CORNER</b>
            <br></br>
-            After an incredible inaugeral season, we now face new beginnings... new matchups, new promos, and maybe even another Dougherty dozen. Although the 2024-2025 season will always be appreciated, a short memory may serve some competitors the best. Will is looking for a comeback after finishing more than 100 points out from first, and OC still has much to prove. What will the 2025-2026 season bring? Will Prince go back to back? Or will the promos lead Saul to victory? Only Joel Klatt and the Gods of college football know. I guaruntee you this, though - there will be chaos. Welcome... to the <b>2025-2026 CFB Pick 'Em.</b>
-            <br></br>
-            GO FROGS! 
-        </P>
+           After an incredible inaugeral season, we now face new beginnings... new matchups, new promos, and maybe even another Dougherty dozen. Although the 2024-2025 season will always be appreciated, a short memory may serve some competitors the best. Will is looking for a comeback after finishing more than 100 points out from first, and OC still has much to prove. What will the 2025-2026 season bring? Will Prince go back to back? Or will the promos lead Saul to victory? Only Joel Klatt and the Gods of college football know. I guaruntee you this, though - there will be chaos. Welcome... to the <b>2025-2026 CFB Pick 'Em.</b>
+           <br></br>
+           GO FROGS! 
+        </p>
     </div>
 </main>
+
 </body>
 </html>
