--- a/big-twelve.html
+++ b/big-twelve.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFB Pick 'Em - Big 12 Picks</title>
     <link rel="stylesheet" href="big-twelve-style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
 <header>
@@ -26,12 +25,15 @@
 </header>
 
 <main>
+    <!-- Week Selector -->
     <div class="week-selector">
         <label for="week-input">Enter Week Number:</label>
         <input type="number" id="week-input" min="1" value="1" />
         <button id="update-week-button">Update</button>
     </div>
     <h1 id="page-title">Week 1 Big 12 Picks</h1>
+
+    <!-- Matchups Table -->
     <div class="matchups-container">
         <table id="picks-table">
             <thead>
@@ -55,29 +57,29 @@
     const pageTitle = document.getElementById("page-title");
     const picksTable = document.querySelector("#picks-table tbody");
 
-    // Function to load matchups from the JSON file for the selected week
+    // Load matchups from the JSON file for the selected week
     function loadMatchups(week) {
-        fetch("./data/big-twelve-2024.json")
+        fetch("./data/big-twelve-2024.json") // Replace with your actual file path
             .then(response => response.json())
             .then(data => {
-                const matchups = data[`week${week}`];
                 picksTable.innerHTML = ""; // Clear the table
-
-                if (matchups) {
+                const matchups = data.filter(matchup => matchup.Week === parseInt(week)); // Filter matchups for the selected week
+                
+                if (matchups.length > 0) {
                     matchups.forEach(matchup => {
                         const row = document.createElement("tr");
                         row.innerHTML = `
-                            <td><strong>${matchup.team1} vs ${matchup.team2}</strong></td>
+                            <td><strong>${matchup.Matchup}</strong></td>
                             <td>
                                 <label>
-                                    <input type="radio" name="matchup-${matchup.matchup_id}" value="${matchup.team1}" required>
-                                    ${matchup.team1}
+                                    <input type="radio" name="${matchup['Unique ID']}" value="${matchup['Away Team']}" required>
+                                    ${matchup['Away Team']}
                                 </label>
                             </td>
                             <td>
                                 <label>
-                                    <input type="radio" name="matchup-${matchup.matchup_id}" value="${matchup.team2}" required>
-                                    ${matchup.team2}
+                                    <input type="radio" name="${matchup['Unique ID']}" value="${matchup['Home Team']}" required>
+                                    ${matchup['Home Team']}
                                 </label>
                             </td>
                         `;
@@ -90,19 +92,19 @@
             .catch(error => console.error("Error loading matchups:", error));
     }
 
-    // Function to update the page title and load matchups for the selected week
+    // Update the page when the week is changed
     function updateWeek() {
         const selectedWeek = weekInput.value;
         pageTitle.textContent = `Week ${selectedWeek} Big 12 Picks`;
         loadMatchups(selectedWeek);
     }
 
-    // Set up initial page load
+    // Initialize the page
     document.addEventListener("DOMContentLoaded", () => {
         updateWeek(); // Load matchups for the default week (Week 1)
     });
 
-    // Update matchups when the "Update" button is clicked
+    // Event listener for the "Update" button
     updateWeekButton.addEventListener("click", updateWeek);
 </script>
 </body>
