--- a/login.html
+++ b/login.html
@@ -8,16 +8,17 @@
     <script>
         // Usernames and their corresponding passwords
         const users = {
-            "Griffin": "GoFrogs",
-            "Owen": "GoFrogs",
-            "Dougherty": "GoFrogs",
-            "Prince": "GoFrogs",
-            "Goin": "GoFrogs",
-            "OC": "GoFrogs",
-            "Semme": "GoFrogs",
-            "Jensen": "GoFrogs",
-            "Saul": "GoFrogs",
-            "Dorgs": "GoFrogs"
+            "MrMeeks": "GoFrogs",
+            "Griffin": "Frogs",
+            "Owen": "Frogs",
+            "Dougherty": "Frogs",
+            "Prince": "Frogs",
+            "Goin": "Frogs",
+            "OC": "Frogs",
+            "Semme": "Frogs",
+            "Jensen": "Frogs",
+            "Saul": "Frogs",
+            "Dorgs": "Frogs"
         };
 
         function validateLogin(event) {
