--- a/login.html
+++ b/login.html
@@ -6,35 +6,35 @@
     <title>CFB Pick 'Em</title>
     <link rel="stylesheet" href="login-style.css">
     <script>
-        // Usernames and their corresponding passwords
-        const users = {
-            "Griffin": "Frogs",
-            "Owen": "Frogs",
-            "Dougherty": "Frogs",
-            "Prince": "Frogs",
-            "Goin": "Frogs",
-            "OC": "Frogs",
-            "Semme": "Frogs",
-            "Jensen": "Frogs",
-            "Saul": "Frogs",
-            "Dorgs": "Frogs"
-        };
-
+        // Send a POST request to Firebase Function to authenticate
         function validateLogin(event) {
             event.preventDefault();
 
-            const username = document.getElementById("username").value.trim();
+            const email = document.getElementById("username").value.trim();
             const password = document.getElementById("password").value;
 
-            if (users[username] && users[username] === password) {
-                // Store the username in localStorage
-                localStorage.setItem("currentUser", username);
-                
-                // Redirect to the home page
-                window.location.href = "home.html";
-            } else {
-                alert("Invalid username or password. Please try again.");
-            }
+            // Send data to Firebase Function for authentication
+            fetch('https://us-central1-your-project-id.cloudfunctions.net/loginWithEmailPassword', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ email, password })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.message === "Login successful") {
+                    // Redirect to the home page
+                    localStorage.setItem("currentUser", email);
+                    window.location.href = "home.html";
+                } else {
+                    alert("Invalid username or password. Please try again.");
+                }
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+                alert('Login failed, please try again');
+            });
         }
     </script>
 </head>
@@ -47,7 +47,7 @@
     <main>
         <div class="login-container">
             <form onsubmit="validateLogin(event)">
-                <input type="text" id="username" name="username" placeholder="Username" required>
+                <input type="email" id="username" name="username" placeholder="Email" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
