--- a/login.html
+++ b/login.html
@@ -1,57 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB Pick 'Em</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content=
+        "width=device-width, initial-scale=1.0" />
+    <title>CFB-Pick-Em</title>
     <link rel="stylesheet" href="login-style.css">
-    <script>
-        // Send a POST request to Firebase Function to authenticate
-        function validateLogin(event) {
-            event.preventDefault();
-
-            const email = document.getElementById("username").value.trim();
-            const password = document.getElementById("password").value;
-
-            // Send data to Firebase Function for authentication
-            fetch('https://us-central1-your-project-id.cloudfunctions.net/loginWithEmailPassword', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email, password })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.message === "Login successful") {
-                    // Redirect to the home page
-                    localStorage.setItem("currentUser", email);
-                    window.location.href = "home.html";
-                } else {
-                    alert("Invalid username or password. Please try again.");
-                }
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Login failed, please try again');
-            });
-        }
+    <script src=
+"https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js">
     </script>
+
+    <script src=
+"https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js">
+    </script>
+    
+    <script src="form.js"></script>
 </head>
+
 <body>
-    <h1>CFB Pick 'Em</h1>
-    <h2><em>2025 - 2026 Season</em></h2>
+    <div class="formContainer">
 
-    <img src="UNTLorax.jpg" alt="ALL HAIL THE LORAX LAY">
+        // Headers and Image
+        <h1>CFB Pick 'Em</h1>
+        <h2><em>2025 - 2026 Season</em></h2>
+        <img src="UNTLorax.jpg" alt="ALL HAIL THE LORAX LAY">
 
-    <main>
-        <div class="login-container">
-            <form onsubmit="validateLogin(event)">
-                <input type="email" id="username" name="username" placeholder="Email" required>
-                <input type="password" id="password" name="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-            </form>
-        </div>
-    </main>
+        // Login Function
+        <input type="email" 
+            placeholder="email" id="email" />
+        <br />
+        <input type="password" 
+            placeholder="password" id="password" />
+        <br />
+        <button onclick="signUp()" id="signUp">
+            SignUp
+        </button>
+        <button onclick="signIn()" id="signIn">
+            SignIn
+        </button>
+        <button onclick="signOut()" id="signOut">
+            SignOut
+        </button>
+    </div>
 </body>
+
 </html>
+
