--- a/login.html
+++ b/login.html
@@ -22,12 +22,12 @@
 <body>
     <div class="formContainer">
 
-        // Headers and Image
+<!-- Headers and Image -->
         <h1>CFB Pick 'Em</h1>
         <h2><em>2025 - 2026 Season</em></h2>
         <img src="UNTLorax.jpg" alt="ALL HAIL THE LORAX LAY">
 
-        // Login Function
+<!-- Login Function -->
         <input type="email" 
             placeholder="email" id="email" />
         <br />
