--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
 
         <!-- Login Function -->
         <div class="login-container">
-            <input type="email" placeholder="email" id="email" />
+            <input type="email" placeholder="Email" id="email" />
             <br />
-            <input type="password" placeholder="password" id="password" />
+            <input type="password" placeholder="Password" id="password" />
             <br />
             <button class="login-button" onclick="logIn()" id="logIn">
                 Log In
